# ChangeLog for games-fps/ut2004-demo
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2004-demo/ChangeLog,v 1.36 2006/01/10 16:01:51 wolf31o2 Exp $

  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Added modular X dependencies and changed to use virtual/libstdc++ instead of
  listing the separate dependencies.

  12 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Making libstdc++-v3 dependency no longer amd64-only and making it also met
  by gcc 3.3, which is a more proper solution.

  13 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Added libstdc++-v3 to RDEPEND and closing bug #112371.

  21 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Added addition dir variable to games_make_wrapper for bug #109793.

  26 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Making games last on inherit line.

  30 Aug 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Changed to match new 3dgamers mirrors structure in thirdpartymirrors.

  17 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Removed unused dedicated USE check in DEPEND.

  16 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3334.ebuild:
  Updated icon image.

*ut2004-demo-3334 (07 Oct 2004)

  07 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  -ut2004-demo-3120-r4.ebuild, +ut2004-demo-3334.ebuild:
  Version bumped to 3334 and closing bug #65232.

  19 Jul 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-demo-3120-r4.ebuild:
  Added libsdl and openal to DEPEND and closing bug #57627.

*ut2004-demo-3120-r4 (08 Jul 2004)

  08 Jul 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  -ut2004-demo-3120-r2.ebuild, -ut2004-demo-3120-r3.ebuild,
  +ut2004-demo-3120-r4.ebuild:
  Updated to close bug #54726.
