@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/ut2004-demo
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2004-demo/ChangeLog,v 1.36 2006/01/10 16:01:51 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2004-demo/ChangeLog,v 1.37 2006/03/24 22:28:35 wolf31o2 Exp $
+
+  24 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  ut2004-demo-3334.ebuild:
+  Moved games_pkg_postinst to beginning of pkg_postinst.
 
   10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   ut2004-demo-3334.ebuild:
